infrastructure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: traefik-gateway
  namespace: cert-manager

spec:
  gatewayClassName: traefik

  listeners:
    - name: web

      protocol: HTTP

      port: 80

      hostname: "*.cralyx.com"

      allowedRoutes:
        namespaces:
          from: All
