infrastructure/gateway/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: grafana
  namespace: monitoring

spec:
  parentRefs:
    - name: traefik-gateway
      namespace: cert-manager

  hostnames:
    - grafana.cralyx.com

  rules:
    - backendRefs:
        - name: monitoring-kube-prometheus-stack-grafana
          port: 80
