infrastructure/gateway/linkding-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: linkding
  namespace: linkding

spec:
  parentRefs:
    - name: traefik-gateway
      namespace: cert-manager

  hostnames:
    - linkding.cralyx.com

  rules:
    - backendRefs:
        - name: linkding
          port: 80
