infrastructure/gateway/vaultwarden-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: vaultwarden
  namespace: vaultwarden

spec:
  parentRefs:
    - name: traefik-gateway
      namespace: cert-manager

  hostnames:
    - vault.cralyx.com

  rules:
    - backendRefs:
        - name: vaultwarden
          port: 80
